--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.hanaloop.tool.</groupId>
 	<artifactId>hanaeco-integration-test-tool</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<name>hanaeco-integration-test-tool</name>
 	<description>Demo project for Hanaeco API integration based on SpringBoot</description>
 	<url/>
@@ -123,7 +123,7 @@
 							<library>restclient</library>
 							<skipValidateSpec>true</skipValidateSpec>
 							<configOptions>
-                                <modelOptional>false</modelOptional>
+                <modelOptional>false</modelOptional>
 								<typeMappings>
 										<typeMapping>integer=Integer</typeMapping>
 										<typeMapping>int64=Long</typeMapping>
@@ -133,10 +133,10 @@
 								</importMappings>
 								<useSpringBoot3>true</useSpringBoot3>
 								<useJakartaEe>true</useJakartaEe>
-                                <additionalProperties>
-                                    <!-- To prevent Optional Properties producing "present": true -->
-                                    <useJsonNullable>false</useJsonNullable>
-                                </additionalProperties>
+								<additionalProperties>
+										<!-- TESTING: To prevent Optional Properties producing "present": true -->
+										<useJsonNullable>false</useJsonNullable>
+								</additionalProperties>
 							</configOptions>
 
 							<apiPackage>com.hanaloop.hanaeco.api</apiPackage>
